2006-05-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py:
	  Cosmetic naming changes.

	* lib/gaupol/gtk/dialogs/about.py:
	  Fixed website url.

	* tools/pyenchant:
	* tools/pylint:
	  Adapted to above changes.

2006-05-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/wwwlib.py:
	  (browse_url): Renamed from open_url.

	* lib/gaupol/gtk/delegates/help.py:
	* lib/gaupol/gtk/dialogs/about.py:
	* lib/gaupol/gtk/dialogs/debug.py:
	* lib/gaupol/gtk/dialogs/find.py:
	* tools/pydoc:
	* tools/pylint:
	  Adapted to above changes.

2006-05-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/test/__init__.py:
	  Made setup/teardown py.test compatible and method-specific.

	* lib/gaupol/test/decor.py:
	  New file split from test/__init__.py.

	* tools/add-changelog:
	  Minor changes.

2006-05-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/encodinglib.py:
	* lib/gaupol/base/util/langlib.py:
	* lib/gaupol/base/util/test/test_encodinglib.py:
	* lib/gaupol/base/util/test/test_langlib.py:
	* lib/gaupol/base/util/test/test_wwwlib.py:
	* lib/gaupol/base/util/wwwlib.py:
	  Minor fixes. Separated testing.

	* lib/gaupol/gtk/delegates/fileopen.py:
	* lib/gaupol/gtk/dialogs/filechooser.py:
	  Adapted to above changes.

	* tools/pylint:
	  Replaced sys.path use with PYTHONPATH.

2006-05-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/util/listlib.py:
	  (strip): Renamed and made non-in-place.

	* lib/gaupol/base/files/ssa.py:
	* lib/gaupol/base/files/subrip.py:
	* lib/gaupol/base/files/subviewer2.py:
	  Adapted to listlib changes.

	* lib/gaupol/base/util/test/__init__.py:
	* lib/gaupol/base/util/test/test_listlib.py:
	  New files.

2006-05-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/base/delegates/format.py:
	* lib/gaupol/base/tags/converter.py:
	* lib/gaupol/base/util/relib.py:
	* lib/gaupol/base/util/test/test_relib.py:
	  Removed relib.
